--- a/Transend/res/layout/about.xml
+++ b/Transend/res/layout/about.xml
@@ -4,4 +4,10 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent">
 
+         <TextView
+        android:id="@+id/helptext"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="You are now on the about screen"/>
+
 </LinearLayout>
