--- a/Transend/res/layout/ratecalculator.xml
+++ b/Transend/res/layout/ratecalculator.xml
@@ -2,11 +2,75 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+              android:layout_height="fill_parent"
+              android:orientation="vertical">
 
-    <TextView android:name="flagDropRate"
+    <TextView android:id="@+id/flagDropRate"
+              android:layout_height="wrap_content"
+              android:layout_width="wrap_content"
+              android:text="Base Fee    "
+              android:textSize="24sp"/>
+
+    <TextView android:id="@+id/flagdroprate_number"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:gravity="right"
+              android:text="$2.00"
+              android:textSize="24sp"/>
+
+    <TextView android:id="@+id/MileageRate"
+              android:layout_height="wrap_content"
+              android:layout_width="wrap_content"
+              android:text="Mileage Rate ($2.25) x 14.0 Miles"
+              android:textSize="24sp"/>
+
+    <TextView android:id="@+id/mileagerate_number"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:gravity="right"
+              android:text="$31.50"
+              android:textSize="24sp"/>
+
+    <TextView android:id="@+id/TimeRate"
+              android:layout_height="wrap_content"
+              android:layout_width="wrap_content"
+              android:text="Time Rate ($20.00) x 0.25 Hours"
+              android:textSize="24sp"/>
+
+    <TextView android:id="@+id/timerate_number"
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:gravity="right"
+              android:text="$5.00"
+              android:textSize="24sp"/>
+
+    <ImageView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:src="@android:drawable/divider_horizontal_dark"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="flagDropRate"/>
+            android:scaleType="fitXY"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="2dp" />
 
+    <LinearLayout android:id="@+id/estimate"
+                  android:layout_height="wrap_content"
+                  android:layout_width="fill_parent"
+                  android:orientation="horizontal">
+        <TextView android:id="@+id/totalprice"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:gravity="left"
+                  android:text="Estimate"
+                  android:textSize="24sp"/>
+
+        <TextView android:id="@+id/totalprice_number"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:gravity="right"
+                  android:text="$38.50"
+                  android:textSize="24sp"/>
+    </LinearLayout>
 </LinearLayout>
