--- a/Transend/res/layout/connecting.xml
+++ b/Transend/res/layout/connecting.xml
@@ -1,7 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:name="@+id/driver_profile_layout2"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+              android:layout_height="fill_parent"
+              android:orientation="vertical"
+              android:padding="10px">
+
+    <LinearLayout
+            android:name="driver_profile_top2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+        <ImageView
+            android:name="@+id/DriverPicture2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/generic_profile"
+            android:layout_gravity="right"
+            />
+
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:name="driver_profile_data2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="10px"    >
+
+            <TextView
+                android:name="@+id/Driver_Name2"
+                android:text="Johnny Cash"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="24sp"
+             />
+
+            <RatingBar
+                style="?android:attr/ratingBarStyleSmall"
+                android:name="@+id/Rating_Bar2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:isIndicator="true"
+                android:stepSize="0.1"
+                android:numStars="5"
+                android:rating="4.8"
+                android:layout_gravity="center"
+                android:paddingTop="5px"
+                android:paddingBottom="5px"
+
+            />
+
+             <Button
+                android:id="@+id/CallButton"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:text="Call the Driver"
+                />
+
+            <Button
+                android:id="@+id/MessageButton"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:text="Send Message"/>
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+
+    <TextView
+        android:name="@+id/DriverArrivalText"
+        android:text="COUNTDOWN"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:gravity="center"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:paddingBottom="0px"
+        android:layout_marginBottom="0px"
+     />
+
+    <TextView
+        android:name="@+id/DriverArrivalText"
+        android:text="06:37"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:gravity="center"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        android:paddingBottom="0px"
+        android:layout_marginBottom="0px"
+     />
+
+        <TextView
+        android:name="@+id/ArrivalText"
+        android:text="to driver arrival"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:padding="0px"
+        android:layout_margin="0px"
+     />
+    <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+        <Button android:id="@+id/seeMap"
+            android:layout_gravity="bottom"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:text="See Map"/>
+        </LinearLayout>
 
 </LinearLayout>
